# Quartz

./: .clang-format  CMakeLists.txt  bnf.txt  main.cc
.cache/clangd/index/: lexer.cc.C348BA18BB13F285.idx  lexer.hpp.F268E1996BA05564.idx  main.cc.1C09235A360E41FF.idx  main.cc.40045F1FAAA231B0.idx  parser.cc.EF50986C7AF6C515.idx
include/lexer/: lexer.hpp
include/parser/: parser.hpp
src/: sample.cext
src/lexer/: CMakeLists.txt  lexer.cc
src/parser/: CMakeLists.txt  parser.cc
